--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="samplefile.css"/>
-    </head>
-    <body>
-        <h1>This is a text</h1>
-        <p>David Wei</p>
-        <p>
-            Will code for fun
-        </p>
-        <img src = "https://lh3.googleusercontent.com/-UcJSXs5dU48/Vpcfwl5Gc_I/AAAAAAAAAQE/D9nE4PerGP0/s454-Ic42/nice-day-1401.jpg"
-    </body>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="style.css">
+  <title>Home Page</title>
+</head>
+<body>
+
+<nav>
+  <ul>
+    <li>
+      <a class="link" href="pandafood.html">Fun Fact</a>
+    </li>
+    <li>
+      <a class="link" href="pandahistory.html">Register NOW to become a panda keeper!</a>
+    </li>
+      <li>
+      <a class="link" href="video.html">A video of daily life for a panda zoo keeper!</a>
+    </li>
+    <li>
+      <a class="link" href="https://github.com/DavidWei95036593/Pandas"> Link to my Github</a>
+    </li>
+  </ul>
+</nav>
+
+  <div class="image">
+    <img class="image" src="images/footer.jpg" width="100%" height="100%">
+   <h2>This is a website of Panda</h2>
+  </div>
+
+  <div class="image">
+
+  <img class="image" src="images/3_Panda.jpg" width="100%" height="100%">
+  </div>
+
+  <div class="image">
+    <img class="image" src="images/footer.jpg" width="100%" height="100%">
+    <h2>Panda spends most of its time resting</h2>
+  </div>
+
+  <div class="image">
+    <img class="image" src="images/lazy_panda.jpg"width="100%" height="100%">
+  </div>
+  <section class="two column">
+
+  <div class="image">
+    <img class="image" src="images/footer.jpg" width="100%" height="100%">
+    <h2>An adult Panda can eat 40 pounds of bamboo each day</h2>
+  </div>
+
+  <div class="image">
+      <img class="image" src="images/pandagroup.jpg"width="100%"height="100%">
+  </div>
+      </section>
+</body> 
+<footer>
+    <p>This was made by David Wei</p>
+  </footer>
 </html>
